// Copyright (c) Microsoft. All rights reserved.

syntax = "proto3";
package Microsoft.CGC.DataAccess.GRPC;

message Account
{
    string Name = 1;
    string Type = 2;
}

message User
{
    string Name = 1;
    string Type = 2;
    string Email = 3;
}

message Group
{
    string Name = 1;
    string Type = 2;
    string Owner = 3;
}

message AddUserRequest
{
    User CurrentUser = 1;
    User User = 2;
}

message AddUserResponse
{
    int32 Status = 1;
    string Message = 2;
}

message RemoveUserRequest
{
    User CurrentUser = 1;
    User User = 2;
}

message RemoveUserResponse
{
    int32 Status = 1;
    string Message = 2;
}

message AddGroupRequest
{
    User CurrentUser = 1;
    Group Group = 2;
}

message AddGroupResponse
{
    int32 Status = 1;
    string Message = 2;
}

message RemoveGroupRequest
{
    User CurrentUser = 1;
    Group Group = 2;
}

message RemoveGroupResponse
{
    int32 Status = 1;
    string Message = 2;
}

message AddAccountToGroupRequest
{
    User CurrentUser = 1;
    Account Account = 2;
    Group Group = 3;
}

message AddAccountToGroupResponse
{
    int32 Status = 1;
    string Message = 2;
}

message RemoveAccountFromGroupRequest
{
    User CurrentUser = 1;
    Account Account = 2;
    Group Group = 3;
}

message RemoveAccountFromGroupResponse
{
    int32 Status = 1;
    string Message = 2;
}

message GetUserRequest
{
    User CurrentUser = 1;
    string UserName = 2;
}

message GetUserResponse
{
    int32 Status = 1;
    string Message = 2;
    User User = 3;
}

message GetGroupRequest
{
    User CurrentUser = 1;
    string GroupName = 2;
}

message GetGroupResponse
{
    int32 Status = 1;
    string Message = 2;
    Group Group = 3;
}

message GetOwnedGroupsRequest
{
    User CurrentUser = 1;
    User User = 2;
}

message GetOwnedGroupsResponse
{
    int32 Status = 1;
    string Message = 2;
    repeated Group Groups = 3;
}

message GetMembersOfGroupRequest
{
    User CurrentUser = 1;
    Group Group = 2;
}

message GetMembersOfGroupResponse
{
    int32 Status = 1;
    string Message = 2;
    repeated Account Accounts = 3;
}

message GetMembershipsOfAccountRequest
{
    User CurrentUser = 1;
    Account Account = 2;
}

message GetMembershipsOfAccountResponse
{
    int32 Status = 1;
    string Message = 2;
    repeated Group Groups = 3;
}

service UserService
{
    rpc AddUser (AddUserRequest) returns (AddUserResponse);
    rpc RemoveUser (RemoveUserRequest) returns (RemoveUserResponse);
    rpc AddGroup (AddGroupRequest) returns (AddGroupResponse);
    rpc RemoveGroup (RemoveGroupRequest) returns (RemoveGroupResponse);
    rpc AddAccountToGroup (AddAccountToGroupRequest) returns (AddAccountToGroupResponse);
    rpc RemoveAccountFromGroup (RemoveAccountFromGroupRequest) returns (RemoveAccountFromGroupResponse);
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc GetGroup (GetGroupRequest) returns (GetGroupResponse);
    rpc GetOwnedGroups (GetOwnedGroupsRequest) returns (GetOwnedGroupsResponse);
    rpc GetMembersOfGroup (GetMembersOfGroupRequest) returns (GetMembersOfGroupResponse);
    rpc GetMembershipsOfAccount (GetMembershipsOfAccountRequest) returns (GetMembershipsOfAccountResponse);
}